[metadata]
name = subgroups
version = attr: subgroups.__version__
description = subgroups is a python library which contains a collection of subgroup discovery algorithms and other data analysis utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, data-science, machine-learning, data-analysis, subgroups, subgroup-discovery
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
author = Antonio López Martínez-Carrasco
author_email = antoniolopezmc1995@gmail.com
maintainer = Antonio López Martínez-Carrasco
maintainer_email = antoniolopezmc1995@gmail.com
url = https://github.com/antoniolopezmc/subgroups

[options]
python_requires = >=3.9.0
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    pandas>=1.3.4
    bitarray>=2.3.0

[options.packages.find]
where = .
include =
    subgroups
    subgroups.*
exclude =
    build*
    dist*
    docs*
